limit order props available for suppliers
