# docs/swagger.yaml
@@ -14,14 +14,8 @@ definitions:
         type: string
       contractor_number:
         type: string
-      customer_address:
-        type: string
       customer_id:
         type: integer
-      customer_inn:
-        type: string
-      customer_kpp:
-        type: string
       customer_name:
         type: string
       delivered_date:
@@ -34,14 +28,8 @@ definitions:
         type: number
       ordered_date:
         type: string
-      seller_address:
-        type: string
       seller_id:
         type: integer
-      seller_inn:
-        type: string
-      seller_kpp:
-        type: string
       seller_name:
         type: string
       shipped_date:
